GNOME Bugzilla – Bug 777306
Can't export recipe created myself
Last modified: 2017-01-17 03:13:41 UTC
Created attachment 343527 [details] recipe export error (image) When I'm trying to Export a recipe I created (using 'New recipe') I get the following error dialog: Error while exporting Can't recursively copy directory
A stacktrace from where this happens would be useful. (Break in gdb on g_set_error)
+ Trace 237063
I don't know if this is what is needed. Anyway, I think the problem may be I have an empty name and fullname
a better strace: ** Message: exporting 1 recipes now Thread 1 "recipes" hit Breakpoint 1, g_set_error ( err=err@entry=0x7fffffffc340, domain=275, code=code@entry=3, format=format@entry=0x7ffff55ccf21 "Error opening file %s: %s") at /home/sadiq/jhbuild/checkout/glib/glib/gerror.c:573 573 { (gdb) bt full
+ Trace 237064
so, what information do you have for your chef ? Could you maybe attach ~/.local/share/recipes/chefs.db and ~/.local/share/recipes/user ?
file content of ~/.local/share/recipes/user: sadiq file content of ~/.local/share/recipes/chefs.db: [sadiq] Image= Name=bad Fullname=good Description= Note: I later added Name and Fullname. The issue still persists.