Avoid an error during exporting recipes without images

We were not careful enough when handling empty image paths.

https://bugzilla.gnome.org/show_bug.cgi?id=777306